syntax = "proto3";
option csharp_namespace = "MessageProtocols.Server";

import "Core/Position.proto";

package server;


//6
message ChangeInterestArea {
  messageprotocols.core.Position position = 1;
}